@@ -3,6 +3,6 @@ package count_java.count;
 public final class CountNonBlank implements Count {
   @Override
   public int count(String s) {
-    return s.isBlank() ? 0 : 1;
+    return s.trim().isEmpty() ? 0 : 1;
   }
 }
